--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/styled-components": "^5.1.9",
     "@types/styled-components-react-native": "^5.1.1",
+    "axios": "^0.21.1",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
